--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -5,7 +5,7 @@
   <div class="card-header">
     <p>&#169; All Rights Reserved</p>
     <footer class="blockquote-footer">
-      <cite title="Source Title">Rahul Varshney</cite>
+      <cite title="Source Title">Nishant Srivastava</cite>
     </footer>
   </div>
 </div>
